# luca-piras.com

./: Pipfile  Piras_Luca_CV.tex  app.py  mkcv.sh  pyproject.toml  readme.md  setup.sh
pages/: cv-certifications.md  cv-resume.md  future-plans.md  index.md  legal-notices.md  news.md  personal-knowledge.md  reasons-for-writing-in-english.md
static/: index.css
